Fixed most of the issues raised by Graham; 	Form is completely blank by default, including a blank organisation that will not validate 	Organisation List is now in alphabetical order (added new NamedQuery in CRUD) 	Couple of fields have been renamed 	Inputs are all trimmed to get rid of the default input from the word form, should by addition remove error with odd characters appearing 	When importing a form which includes an organisation which does not exist in the database, it asks if the user wants to import instead of just jumping straight to he add organisation page (add org button becomes import org button)

--- a/importer.ui/src/main/webapp/importer.css
+++ b/importer.ui/src/main/webapp/importer.css
@@ -11,6 +11,7 @@ root {
 }
 
 .formlabel {
+    float: left;
     display: inline-block;
     width: 150px;
 }
